--- a/PimaIndiansDiabetes/work.ipynb
+++ b/PimaIndiansDiabetes/work.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a9507bec",
+   "metadata": {},
+   "source": [
+    "### Import thư viện"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1957,
+   "execution_count": 45,
    "id": "00b69fab",
    "metadata": {},
    "outputs": [],
@@ -19,20 +27,21 @@
    "id": "67e3573a",
    "metadata": {},
    "source": [
-    "1. Number of times pregnant\n",
-    "2. Plasma glucose concentration a 2 hours in an oral glucose tolerance test\n",
-    "3. Diastolic blood pressure (mm Hg)\n",
-    "4. Triceps skin fold thickness (mm)\n",
-    "5. 2-Hour serum insulin (mu U/ml)\n",
-    "6. Body mass index (weight in kg/(height in m)^2)\n",
-    "7. Diabetes pedigree function\n",
-    "8. Age (years)\n",
-    "9. Class variable (0 or 1)"
+    "### Các cột dữ liệu: \n",
+    "1. n_preg: Số lần mang thai\n",
+    "2. plasma_glu: Nồng độ glucose huyết tương sau 2 giờ\n",
+    "3. bld_press: Huyết áp tâm trương\n",
+    "4. sk_fd_th: Độ dày nếp gấp da\n",
+    "5. serum_ins: Nồng độ insulin huyết thanh sau 2 giờ\n",
+    "6. bmi: Chỉ số khối cơ thể\n",
+    "7. dia_ped_func: Hàm phả hệ tiểu đường\n",
+    "8. age: Tuổi\n",
+    "9. class: Mắc bệnh\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1958,
+   "execution_count": 46,
    "id": "6e75ee8d",
    "metadata": {},
    "outputs": [
@@ -219,7 +228,7 @@
        "9   54      1  "
       ]
      },
-     "execution_count": 1958,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1959,
+   "execution_count": 47,
    "id": "e6360e87",
    "metadata": {},
    "outputs": [
@@ -265,8 +274,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c54ab3ea",
+   "metadata": {},
+   "source": [
+    "### Kiểm tra thiếu và trùng lặp"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1960,
+   "execution_count": 48,
    "id": "659242c9",
    "metadata": {},
    "outputs": [
@@ -300,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1961,
+   "execution_count": 49,
    "id": "294aa742",
    "metadata": {},
    "outputs": [
@@ -459,7 +476,7 @@
        "max        2.420000   81.000000    1.000000  "
       ]
      },
-     "execution_count": 1961,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,8 +486,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "59a7763d",
+   "metadata": {},
+   "source": [
+    "### Đếm các dòng có giá trị bằng 0"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1962,
+   "execution_count": 50,
    "id": "04416773",
    "metadata": {},
    "outputs": [
@@ -497,8 +522,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f75091e9",
+   "metadata": {},
+   "source": [
+    "### Thay một số cột giá trị 0 về null"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1963,
+   "execution_count": 51,
    "id": "d2fa6009",
    "metadata": {},
    "outputs": [],
@@ -509,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1964,
+   "execution_count": 52,
    "id": "4c944ffa",
    "metadata": {},
    "outputs": [
@@ -543,8 +576,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9b61430c",
+   "metadata": {},
+   "source": [
+    "### Xử lý các cột null sau khi thay thế."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1965,
+   "execution_count": 53,
    "id": "fc9dccac",
    "metadata": {},
    "outputs": [
@@ -569,8 +610,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8b574d7d",
+   "metadata": {},
+   "source": [
+    "### Kiểm tra dữ liệu sau khi xử lý null."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1966,
+   "execution_count": 54,
    "id": "6c90dceb",
    "metadata": {},
    "outputs": [
@@ -604,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1967,
+   "execution_count": 55,
    "id": "1c0adc11",
    "metadata": {},
    "outputs": [
@@ -763,7 +812,7 @@
        "max        2.420000   81.000000    1.000000  "
       ]
      },
-     "execution_count": 1967,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,8 +822,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9eef983",
+   "metadata": {},
+   "source": [
+    "### Kiểm tra phân bố của cột class."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1968,
+   "execution_count": 56,
    "id": "d39fc6b1",
    "metadata": {},
    "outputs": [
@@ -808,8 +865,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a6554470",
+   "metadata": {},
+   "source": [
+    "### Plot biểu đồ cột cho từng cột."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1969,
+   "execution_count": 67,
    "id": "3b6b1bde",
    "metadata": {},
    "outputs": [
@@ -827,7 +892,7 @@
        "        <Axes: title={'center': 'class'}>]], dtype=object)"
       ]
      },
-     "execution_count": 1969,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -847,8 +912,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "085b2c36",
+   "metadata": {},
+   "source": [
+    "### Plot biểu đồ whisker box cho từng cột."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1970,
+   "execution_count": 77,
    "id": "38a5674a",
    "metadata": {},
    "outputs": [
@@ -867,7 +940,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 1970,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -887,8 +960,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3035e4e3",
+   "metadata": {},
+   "source": [
+    "### Plot biểu đồ tần suất giá trị cột class cho mỗi cột."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1971,
+   "execution_count": 78,
    "id": "a8912631",
    "metadata": {},
    "outputs": [
@@ -929,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1972,
+   "execution_count": 79,
    "id": "2384fe78",
    "metadata": {},
    "outputs": [
@@ -948,7 +1029,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 1972,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,8 +1039,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "450c9723",
+   "metadata": {},
+   "source": [
+    "### Plot biểu đồ tương quan."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1973,
+   "execution_count": 80,
    "id": "bc006f20",
    "metadata": {},
    "outputs": [
@@ -969,7 +1058,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 1973,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -991,16 +1080,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d8fe9839",
+   "cell_type": "markdown",
+   "id": "84988ebc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Thực hiện chọn đặc trưng và chia dữ liệu."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1974,
+   "execution_count": null,
    "id": "316143da",
    "metadata": {},
    "outputs": [],
@@ -1009,14 +1098,32 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split, StratifiedKFold\n",
     "\n",
+    "# Select a copy\n",
     "copyDataFrame = dataFrame.copy()\n",
     "X = copyDataFrame[[\"n_preg\", \"plasma_glu\", \"bmi\", \"age\"]] \n",
     "y = copyDataFrame[\"class\"]\n",
     "\n",
     "# 70% train, 15% test, 15% validate\n",
     "X_train, X_temp, y_train, y_temp = train_test_split(X, y, test_size=0.3, random_state=42, stratify=y)\n",
-    "X_val, X_test, y_val, y_test = train_test_split(X_temp, y_temp, test_size=0.5, random_state=42, stratify=y_temp)\n",
-    "\n",
+    "X_val, X_test, y_val, y_test = train_test_split(X_temp, y_temp, test_size=0.5, random_state=42, stratify=y_temp)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efea964b",
+   "metadata": {},
+   "source": [
+    "### Biến đổi dữ liệu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e842e658",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Logarithmic transformation\n",
     "X_train = np.log1p(X_train)\n",
     "X_test = np.log1p(X_test)\n",
     "X_val = np.log1p(X_val)\n",
@@ -1029,8 +1136,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "76d6f49b",
+   "metadata": {},
+   "source": [
+    "### Chọn các model cho việc học dữ liệu."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1975,
+   "execution_count": null,
    "id": "b940364e",
    "metadata": {},
    "outputs": [
@@ -1072,7 +1187,6 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from xgboost import XGBClassifier\n",
-    "from sklearn.metrics import accuracy_score, f1_score, roc_auc_score\n",
     "\n",
     "neg, pos = np.bincount(y_train)\n",
     "scale_pos_weight = neg / pos\n",
@@ -1100,29 +1214,20 @@
     "        random_state=42\n",
     "    ),\n",
     "    \"K-Neighbours\": KNeighborsClassifier(n_neighbors=5, weights='distance')\n",
-    "}\n",
-    "\n",
-    "for name, model in models.items():\n",
-    "    model.fit(X_train, y_train)\n",
-    "\n",
-    "    y_pred = model.predict(X_val)\n",
-    "    y_prob = model.predict_proba(X_val)[:,1]\n",
-    "\n",
-    "    acc = accuracy_score(y_val, y_pred)\n",
-    "    f1 = f1_score(y_val, y_pred)\n",
-    "    roc_auc = roc_auc_score(y_val, y_prob)\n",
-    "\n",
-    "    print(f\"{name} Results:\")\n",
-    "    print(f\"  Accuracy: {acc:.4f}\")\n",
-    "    print(f\"  F1 Score: {f1:.4f}\")\n",
-    "    print(f\"  ROC AUC:  {roc_auc:.4f}\")\n",
-    "    print(\"-\" * 30)\n",
-    "\n"
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b3dbfc0",
+   "metadata": {},
+   "source": [
+    "### Thử nghiệm và đánh giá hiệu suất của các model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1976,
+   "execution_count": null,
    "id": "24f2381e",
    "metadata": {},
    "outputs": [
@@ -1160,10 +1265,11 @@
     }
    ],
    "source": [
+    "from sklearn.metrics import accuracy_score, f1_score, roc_auc_score\n",
+    "\n",
     "skf = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
     "fold = 1\n",
     "results = {name: {'accuracy': [], 'f1': [], 'roc_auc': []} for name in models.keys()}\n",
-    "\n",
     "\n",
     "for train_index, val_index in skf.split(X_train, y_train):\n",
     "    X_train_fold, X_val_fold = X_train[train_index], X_train[val_index]\n",
@@ -1203,8 +1309,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "17f07599",
+   "metadata": {},
+   "source": [
+    "### Chọn model tốt nhất để chạy."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1977,
+   "execution_count": 84,
    "id": "9fc9b7cc",
    "metadata": {},
    "outputs": [
@@ -1258,8 +1372,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c26750ba",
+   "metadata": {},
+   "source": [
+    "### Chạy và kiểm tra hiệu suất model trên tập test."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1978,
+   "execution_count": 85,
    "id": "26ee74cb",
    "metadata": {},
    "outputs": [
