--- a/Lab05_EDA/1.3.3/baiThucHanh1.ipynb
+++ b/Lab05_EDA/1.3.3/baiThucHanh1.ipynb
@@ -18,19 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "19f6fd89",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\Installs\\Anaconda\\envs\\old_version\\lib\\site-packages\\sweetviz\\graph.py:8: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  from pkg_resources import resource_filename\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sweetviz as sv\n",
     "import pandas as pd"
@@ -47,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "0bfb704d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataFrame = pd.read_csv(\"data/marketing_campaign.csv\", sep=\"\\t\")"
+    "dataFrame = pd.read_csv(\"../data/marketing_campaign.csv\", sep=\"\\t\")"
    ]
   },
   {
@@ -65,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "53d3f5be",
    "metadata": {},
    "outputs": [
@@ -128,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "567656a9",
    "metadata": {},
    "outputs": [
@@ -155,14 +146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "b2560861",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "332472c2f261412caae3ca7a9c4f4be1",
+       "model_id": "59c3327526424c6c8744233ca8e797a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -189,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "11144359",
    "metadata": {},
    "outputs": [
@@ -197,12 +188,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Report reports/report1.html was generated.\n"
+      "Report ../reports/report1.html was generated.\n"
      ]
     }
    ],
    "source": [
-    "report.show_html(\"reports/report1.html\", open_browser=False)"
+    "report.show_html(\"../reports/report1.html\", open_browser=False)"
    ]
   },
   {
