Add Kaggle Challenge 1

--- a/Lab05_EDA/1.3.3/baiThucHanh1.ipynb
+++ b/Lab05_EDA/1.3.3/baiThucHanh1.ipynb
@@ -18,10 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "19f6fd89",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Installs\\Anaconda\\envs\\old_version\\lib\\site-packages\\sweetviz\\graph.py:8: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  from pkg_resources import resource_filename\n"
+     ]
+    }
+   ],
    "source": [
     "import sweetviz as sv\n",
     "import pandas as pd"
@@ -38,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "0bfb704d",
    "metadata": {},
    "outputs": [],
@@ -56,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "53d3f5be",
    "metadata": {},
    "outputs": [
@@ -119,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "567656a9",
    "metadata": {},
    "outputs": [
@@ -146,14 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "b2560861",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "59c3327526424c6c8744233ca8e797a6",
+       "model_id": "e5039bba7cd246a38a8fd6f66b4e9ec8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -180,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "11144359",
    "metadata": {},
    "outputs": [
