--- a/Lab05_EDA/1.3.2/BaiToan2/nhiemvu1.ipynb
+++ b/Lab05_EDA/1.3.2/BaiToan2/nhiemvu1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "910fb39b",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "4ecf8c55",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
        "9       4250.0     NaN  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "0d13acf1",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
        "Text(0.5, 1.0, 'Bivariate analysis of Culmen Length and body mass')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "e2a7ab0d",
    "metadata": {},
    "outputs": [
@@ -340,7 +340,7 @@
        "Gentoo     1      58    61"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,74 +359,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "f2959cee",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\QUOC VIET\\AppData\\Local\\Temp\\ipykernel_19524\\4042239067.py:1: FutureWarning: The provided callable <function mean at 0x000001D5FEB17920> is currently using DataFrameGroupBy.mean. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"mean\" instead.\n",
-      "  pd.pivot_table(penguins_data, values='culmen_length_mm',\n"
+     "ename": "TypeError",
+     "evalue": "mean() missing 1 required positional argument: 'a'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m pd.pivot_table(penguins_data, values=\u001b[33m'\u001b[39m\u001b[33mculmen_length_mm\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m index=\u001b[33m'\u001b[39m\u001b[33mspecies\u001b[39m\u001b[33m'\u001b[39m, aggfunc=\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmean\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[31mTypeError\u001b[39m: mean() missing 1 required positional argument: 'a'"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>culmen_length_mm</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>species</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Adelie</th>\n",
-       "      <td>38.791391</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Chinstrap</th>\n",
-       "      <td>48.833824</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Gentoo</th>\n",
-       "      <td>47.504878</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           culmen_length_mm\n",
-       "species                    \n",
-       "Adelie            38.791391\n",
-       "Chinstrap         48.833824\n",
-       "Gentoo            47.504878"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -444,17 +390,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "0c34264d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1d5ad6ddd10>"
+       "<seaborn.axisgrid.PairGrid at 0x2d8cd626510>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
