--- a/KaggleChallenge1/Challenge1_0.77511.ipynb
+++ b/KaggleChallenge1/Challenge1_0.77511.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 35,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 399,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "4  22.0      1      1  3101298  12.2875   NaN        S  "
       ]
      },
-     "execution_count": 400,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 402,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 40,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.321677Z",
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
        "       'C148'], dtype=object)"
       ]
      },
-     "execution_count": 404,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
        "U         481  206"
       ]
      },
-     "execution_count": 406,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
        "U          70.014556  29.985444"
       ]
      },
-     "execution_count": 409,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
        "4  Group 4  "
       ]
      },
-     "execution_count": 411,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 50,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.387429Z",
@@ -953,7 +953,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 413,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 51,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.419611Z",
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 52,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.456937Z",
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 53,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.481921Z",
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 54,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.507642Z",
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 55,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.538156Z",
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1131,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 420,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1161,7 @@
        "array([1, 0, 3, 4, 2, 5, 8])"
       ]
      },
-     "execution_count": 421,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1188,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 422,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 60,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.560305Z",
@@ -1240,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 61,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.722111Z",
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 62,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.730892Z",
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 63,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.762348Z",
@@ -1296,7 +1296,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 426,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 65,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:04.790159Z",
@@ -1398,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 66,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:05.952651Z",
@@ -1433,8 +1433,8 @@
       "3    0\n",
       "4    1\n",
       "5    0\n",
-      "6    0\n",
-      "7    0\n",
+      "6    1\n",
+      "7    1\n",
       "8    1\n",
       "9    0\n",
       "dtype: int64\n"
@@ -1442,7 +1442,7 @@
     }
    ],
    "source": [
-    "best_model = RandomForestClassifier(random_state=42, n_jobs=-1, n_estimators=200)\n",
+    "best_model = XGBClassifier(eval_metric='logloss', random_state=42, n_jobs=-1)\n",
     "best_model.fit(X_train, y_train)\n",
     "\n",
     "y_val_pred = best_model.predict(X_val)\n",
@@ -1456,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1467,16 +1467,16 @@
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.81      0.87      0.84       110\n",
-      "           1       0.77      0.67      0.71        69\n",
+      "           0       0.82      0.85      0.84       110\n",
+      "           1       0.75      0.71      0.73        69\n",
       "\n",
-      "    accuracy                           0.79       179\n",
-      "   macro avg       0.79      0.77      0.78       179\n",
-      "weighted avg       0.79      0.79      0.79       179\n",
+      "    accuracy                           0.80       179\n",
+      "   macro avg       0.79      0.78      0.79       179\n",
+      "weighted avg       0.80      0.80      0.80       179\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[96 14]\n",
-      " [23 46]]\n"
+      "[[94 16]\n",
+      " [20 49]]\n"
      ]
     }
    ],
@@ -1492,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 68,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-09-15T13:28:06.926955Z",
